syntax = "proto3";

package project.planton.provider.digitalocean.digitaloceandroplet.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/digitalocean/digitaloceandroplet/v1/spec.proto";
import "project/planton/provider/digitalocean/digitaloceandroplet/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";
import "project/planton/shared/status.proto";

// digital-ocean-droplet
message DigitalOceanDroplet {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = "digital-ocean.project-planton.org/v1"];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = "DigitalOceanDroplet"];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  DigitalOceanDropletSpec spec = 4 [(buf.validate.field).required = true];

  //status
  DigitalOceanDropletStatus status = 5;
}

// digital-ocean-droplet status
message DigitalOceanDropletStatus {
  //stack-outputs
  //  digital-ocean-droplet stack-outputs
  DigitalOceanDropletStackOutputs outputs = 1;
}
